--- a/miku-next/package.json
+++ b/miku-next/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "cd .. && husky install",
+    "format": "pnpm exec prettier --write ."
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
@@ -24,6 +26,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
 }
